--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,9 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="{% static 'site.css' ' %}">
+
+    <!--Meus estilos-->
+    <link rel="stylesheet" href="{% static 'style.css' ' %}">
 </head>
 
 <body>
@@ -38,17 +41,9 @@
     <!-- Active js -->
     <script src="{% static 'js/active.js' %}"></script>
 
-    <script>
-        var $ = jQuery;
-        $(document).on('click', '.confirm-delete', function () {
-          $("#confirmDeleteModal").attr("caller-id", $(this).attr("id"));
-        });
+    <!-- Meus scripts -->
+    <script src="{% static 'js/scripts.js' %}"></script>
 
-        $(document).on('click', '#confirmDeleteButtonModal', function () {
-          var caller = $("#confirmDeleteButtonModal").closest(".modal").attr("caller-id");
-          window.location = $("#".concat(caller)).attr("href");
-        });
-    </script>
 </body>
 
 </html>
